feat: endpoints search
